--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo-2.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,10 +47,10 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
 
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <img src="img/logo.png" style="height: 30px; width: 30px;" alt="logo">
+            <img src="img/logo-2.png" style="height: 30px; width: 30px;" alt="logo">
         </a>
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary small-device">DIAMOND BRIDAL</h1>
+            <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div>
                 <a href="index.html" >
-                    <img src="img/logo.png" style="height: 50px; width: 50px;" alt="logo">
+                    <img src="img/logo-2.png" style="height: 40px; width: 95px;" alt="logo">
                 </a>
             </div>
             <div class="navbar-nav ms-auto py-0">
@@ -67,7 +67,7 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
             </div>
             <a href="index.html" class="navbar-brand bg-primary py-2 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-white">DIAMOND BRIDAL</h1>
+                <h1 class="text-white">DIAMOND DRIDAL</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="project.html" class="nav-item nav-link">Projects</a>
@@ -223,7 +223,7 @@
                                      Reasonable Price
                                 </p>
                                 <p>
-                                        "At our service center, we take pride in offering top-notch solutions,"
+                                        "At our service center, we take pride in offering"
 
                                       <a class="" href="{{ route('reasonable') }}">Read more..</a>
                                 </p>
@@ -246,7 +246,7 @@
                                     24/7 Supports
                               </p>
                               <p>
-                                    "Our 24/7 support is designed with your convenience in mind providing"
+                                    "Our 24/7 support is designed with your"
                                     <a class="" href="{{ route('twonty_four') }}">Read more..</a>
                               </p>
                             </div>
