--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Category</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Category-1</a>
-                        <a href="team.html" class="dropdown-item">Category-2</a>
-                        <a href="testimonial.html" class="dropdown-item">Category-3</a>
-                        <a href="404.html" class="dropdown-item">Category-4</a>
+                        <a href="#" class="dropdown-item">Category-1</a>
+                        <a href="#" class="dropdown-item">Category-2</a>
+                        <a href="#" class="dropdown-item">Category-3</a>
+                        <a href="#" class="dropdown-item">Category-4</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Shop-1</a>
-                        <a href="team.html" class="dropdown-item">Shop-2</a>
-                        <a href="testimonial.html" class="dropdown-item">Shop-3</a>
-                        <a href="404.html" class="dropdown-item">Shop-4</a>
+                        <a href="#" class="dropdown-item">Shop-1</a>
+                        <a href="#" class="dropdown-item">Shop-2</a>
+                        <a href="#" class="dropdown-item">Shop-3</a>
+                        <a href="#" class="dropdown-item">Shop-4</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -532,7 +532,7 @@
                 <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                     <div class="product-item bg-light mb-4">
                         <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100"style="height:600px; width: 300px;"  src="img/b1.jpg" alt="">
+                            <img class="img-fluid w-100"style="height:800px; width: 300px;"  src="img/b1.jpg" alt="">
                             <div class="product-action">
                                 <a class="btn btn-outline-dark btn-square view-btn" data-name="Panjabi 7"  data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Panjabi 7" data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -558,7 +558,7 @@
                 <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                     <div class="product-item bg-light mb-4">
                         <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b3.jpeg" alt="">
+                            <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b3.jpeg" alt="">
                             <div class="product-action">
                                 <a class="btn btn-outline-dark btn-square view-btn" data-name="Dresses 7"  data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Dresses 7" data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -584,7 +584,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6  wow fadeInUp">
                     <div class="product-item bg-light mb-4">
                         <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b5.jpg" alt="">
+                            <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b5.jpg" alt="">
                             <div class="product-action">
                                 <a class="btn btn-outline-dark btn-square view-btn" data-name="Formal Shirt 6"  data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Formal Shirt 6" data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -610,7 +610,7 @@
                 <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                     <div class="product-item bg-light mb-4">
                         <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b2.jpg" alt="">
+                            <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b2.jpg" alt="">
                             <div class="product-action">
                                 <a class="btn btn-outline-dark btn-square view-btn" data-name="Kameez"  data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Kameez " data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -636,7 +636,7 @@
                 <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                     <div class="product-item bg-light mb-4">
                         <div class="product-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b4.jpg" alt="">
+                            <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b4.jpg" alt="">
                             <div class="product-action">
                                 <a class="btn btn-outline-dark btn-square view-btn" data-name="Bag"  data-price="459" data-image="" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Bag " data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -753,7 +753,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100"style="height:600px; width: 300px;"  src="img/c3.jpg" alt="">
+                        <img class="img-fluid w-100"style="height:800px; width: 300px;"  src="img/c3.jpg" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square view-btn" data-name="Panjabi 7"  data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Panjabi 7" data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -779,7 +779,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/c4.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/c4.jpg" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square view-btn" data-name="Dresses 7"  data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Dresses 7" data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -805,7 +805,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6  wow fadeInUp">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/c1.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/c1.jpg" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square view-btn" data-name="Formal Shirt 6"  data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Formal Shirt 6" data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -831,7 +831,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/c5.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/c5.jpg" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square view-btn" data-name="Kameez"  data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Kameez " data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" href="#"><i class="far fa-heart"></i></a>
@@ -857,7 +857,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/c2.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/c2.jpg" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square view-btn" data-name="Bag"  data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Bag " data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" href="#"><i class="far fa-heart"></i></a>
