--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="#" class="dropdown-item">Shop-1</a>
-                        <a href="#" class="dropdown-item">Shop-2</a>
-                        <a href="#" class="dropdown-item">Shop-3</a>
-                        <a href="#" class="dropdown-item">Shop-4</a>
+                        <a href="shop.html" class="dropdown-item">Shop-1</a>
+                        <a href="shop.html" class="dropdown-item">Shop-2</a>
+                        <a href="shop.html" class="dropdown-item">Shop-3</a>
+                        <a href="shop.html" class="dropdown-item">Shop-4</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <div>
-                <a href="" class="btn btn-success appointment py-3 px-4 me-5" data-bs-toggle="modal" data-bs-target="#videoModal">
-                    <span>Appointment</span>
-                </a>
+
+                <div>
+                    <a href="" class="btn btn-success appointment py-3 px-4" data-bs-toggle="modal" data-bs-target="#videoModal">
+                        <span>Appointment</span>
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -156,7 +157,7 @@
                 <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item position-relative active" style="height: 900px;">
-                            <img class="position-absolute w-100 h-100" src="img/cu3.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/g13.gif" style="object-fit: cover;">
                             <!-- <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px; margin-bottom: 190px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Appointment</h1>
@@ -312,6 +313,7 @@
         </div>
     </div>
     <!-- choose End -->
+
     <!-- New Collections Start -->
     <div class="container-xxl bg-light py-5 my-5">
         <div class="container py-5">
@@ -376,6 +378,47 @@
         </div>
     </div>
     <!-- Service End -->
+
+    <!-- Reels Start -->
+    <div class="container-fluid pt-5 pb-3">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            <p class="text-primary text-uppercase mb-2">Our Reels</p>
+            <h1 class="display-6 mb-4">Reels video...</h1>
+        </div>    
+        <div class="row px-xl-5 justify-content-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 pb-1  wow fadeInUp">
+                <div class="product-item bg-light mb-4">
+                    <div class="product-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100 reels" src="img/g4.gif" alt=""> 
+                        <!-- <video src=""></video>   -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 pb-1  wow fadeInUp">
+                <div class="product-item bg-light mb-4">
+                    <div class="product-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100 reels" src="img/g11.gif" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6  wow fadeInUp">
+                <div class="product-item bg-light mb-4">
+                    <div class="product-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100 reels" src="img/g5.gif" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 pb-1  wow fadeInUp">
+                <div class="product-item bg-light mb-4">
+                    <div class="product-img position-relative overflow-hidden">
+                        <img class="img-fluid w-100 reels" src="img/g10.gif" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Bridal End -->
+
          
     <!-- Video Modal Start -->
     <div class="modal modal-video fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
