--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                 <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item position-relative active" style="height: 900px;">
-                            <img class="position-absolute w-100 h-100" src="img/g13.gif" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/g4.gif" style="object-fit: cover;">
+                            <!-- <video class="position-absolute w-100 h-100" src="img/v.mp4" style="object-fit: cover;"></video> -->
                             <!-- <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px; margin-bottom: 190px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Appointment</h1>
