--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Header Start -->
     <div class="container-fluid hero-header bg-light  mb-5">
         <div class="row">
@@ -116,10 +115,16 @@
                             <img class="position-absolute w-100 h-100" src="img/c2.jpg" style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                    <div class="p-3" style="max-width: 700px;margin-bottom: 300px;"">
+                                    <div class="p-3" style="max-width: 700px;margin-bottom: 300px;">
                                         <!-- <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Appointment</h1> -->
                                         <p class="mx-md-5 px-5 animate__animated animate__bounceIn"></p>
                                         <a href="" class="btn btn-primary py-3 px-4 me-5" data-bs-toggle="modal" data-bs-target="#videoModal">Appointment</a>
+                                        <div class="d-flex mt-4">
+                                            <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                            <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-instagram"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +133,7 @@
                             <img class="position-absolute w-100 h-100" src="img/c5.jpg" style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;margin-bottom: 300px;"">
+                                <div class="p-3" style="max-width: 700px;margin-bottom: 300px;">
                                     <!-- <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Appointment</h1> -->
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn"></p>
                                     <a href="" class="btn btn-primary py-3 px-4 me-5" data-bs-toggle="modal" data-bs-target="#videoModal">Appointment</a>
@@ -477,14 +482,7 @@
                                     </div>
                                     <div class="col-12 text-center">
                                         <button class="btn btn-primary py-3 px-5 mb-3" type="submit">Send Appointment</button>
-                                    </div>
-                                    <div class="d-flex justify-content-center mt-4">
-                                        <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
-                                    </div>
-                                    
+                                    </div> 
                                 </div>
                             </form>
                         </div>
