--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     <div class="p-3" style="max-width: 700px;margin-bottom: 300px;">
                                         <!-- <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Appointment</h1> -->
                                         <p class="mx-md-5 px-5 animate__animated animate__bounceIn"></p>
-                                        <a href="" class="btn btn-primary py-3 px-4 me-5" data-bs-toggle="modal" data-bs-target="#videoModal">Appointment</a>
+                                        <a href="" class="btn btn-primary py-3 px-4 me-5" data-bs-toggle="modal" data-bs-target="#videoModal">Book Appointment</a>
                                         <div class="d-flex mt-4">
                                             <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-twitter"></i></a>
                                             <a class="btn btn-square btn-outline-primary rounded-circle me-2 bg-white" href="#"><i class="fab fa-facebook-f"></i></a>
