--- a/shop.html
+++ b/shop.html
@@ -73,18 +73,18 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Category</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="#" class="dropdown-item">Category-1</a>
-                        <a href="#" class="dropdown-item">Category-2</a>
-                        <a href="#" class="dropdown-item">Category-3</a>
+                        <a href="#" class="dropdown-item">Bridal Dress</a>
+                        <a href="#" class="dropdown-item">Groom</a>
+                        <a href="#" class="dropdown-item">Ornaments</a>
                         <a href="#" class="dropdown-item">Category-4</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="shop.html" class="dropdown-item">Shop-1</a>
-                        <a href="#" class="dropdown-item">Shop-2</a>
-                        <a href="#" class="dropdown-item">Shop-3</a>
+                        <a href="shop.html" class="dropdown-item">Bridal Shree</a>
+                        <a href="#" class="dropdown-item">Khubsurat</a>
+                        <a href="shop.html" class="dropdown-item">Shop-3</a>
                         <a href="#" class="dropdown-item">Shop-4</a>
                     </div>
                 </div>
