--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Category</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="#" class="dropdown-item">Bridal Dress</a>
-                        <a href="#" class="dropdown-item">Groom</a>
-                        <a href="#" class="dropdown-item">Ornaments</a>
+                        <a href="bridal_dress.html" class="dropdown-item">Bridal Dress</a>
+                        <a href="groom.html" class="dropdown-item">Groom</a>
+                        <a href="ornaments.html" class="dropdown-item">Ornaments</a>
                         <a href="#" class="dropdown-item">Category-4</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
                     <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="shop.html" class="dropdown-item">Bridal Shree</a>
-                        <a href="#" class="dropdown-item">Khubsurat</a>
+                        <a href="bridal_saree.html" class="dropdown-item">Bridal Shree</a>
+                        <a href="khubsurat.html" class="dropdown-item">Khubsurat</a>
                         <a href="shop.html" class="dropdown-item">Shop-3</a>
                         <a href="#" class="dropdown-item">Shop-4</a>
                     </div>
@@ -190,7 +190,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item position-relative active bg-dark" style="height: 100px;">
                                     <!-- <img class="position-absolute w-100 h-100" src="img/small-img.jpg" style="object-fit: cover;"> -->
-                                     <a href="">
+                                     <a href="ornaments.html">
                                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                             <!-- Content for the smaller row -->
                                             <h1 class="text-white" style="margin: -8px;">ORNAMENTS</h1>
