--- a/shop.html
+++ b/shop.html
@@ -101,20 +101,20 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid hero-header bg-light py-5 mb-5">
-        <div class="container py-5">
+    <div class="container-fluid hero-header bg-white py-5">
+        <div class="container ">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
                     <h1 class="display-4 mb-3 animated slideInDown">Shop</h1>
                     <nav aria-label="breadcrumb animated slideInDown">
                         <ol class="breadcrumb mb-0">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">shop</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Shop-1</li>
+                            <li class="breadcrumb-item"><a href="#">Shop</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Shop</li>
                         </ol>
                     </nav>
                 </div>
-                <div class="col-lg-6 animated fadeIn">
+                <!-- <div class="col-lg-6 animated fadeIn">
                     <div class="row g-3">
                         <div class="col-6 text-end">
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-1.jpg" alt="">
@@ -123,7 +123,7 @@
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -145,7 +145,7 @@
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="fact-item bg-white text-center h-100 p-5">
                                 <a href="index.html" class="navbar-brand">
-                                    <h1 class="display-5 text-primary">Shop-1</h1>
+                                    <h1 class="display-5 text-primary">Shop-3</h1>
                                 </a>
                                 <div>
                                 <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
