--- a/about.html
+++ b/about.html
@@ -102,8 +102,8 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid hero-header bg-light py-5 mb-5">
-        <div class="container py-5">
+    <div class="container-fluid hero-header bg-light py-5">
+        <div class="container ">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
                     <h1 class="display-4 mb-3 animated slideInDown">About Us</h1>
@@ -115,7 +115,7 @@
                         </ol>
                     </nav>
                 </div>
-                <div class="col-lg-6 animated fadeIn">
+                <!-- <div class="col-lg-6 animated fadeIn">
                     <div class="row g-3">
                         <div class="col-6 text-end">
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-1.jpg" alt="">
@@ -124,7 +124,7 @@
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
