--- a/bridal_dress.html
+++ b/bridal_dress.html
@@ -43,62 +43,62 @@
     <!-- Spinner End -->
 
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+        <!-- Navbar Start -->
+        <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
 
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <img src="img/logo-2.png" style="height: 30px; width: 30px;" alt="logo">
-        </a>
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
-            <div>
-                <a href="index.html" >
-                    <img src="img/logo-2.png" style="height: 40px; width: 95px;" alt="logo">
-                </a>
-            </div>
-            <div class="navbar-nav ms-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
-            </div>
-            <a href="index.html" class="navbar-brand bg-primary py-2 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-white">DIAMOND DRIDAL</h1>
+            <a href="index.html" class="navbar-brand d-block d-lg-none">
+                <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
             </a>
-            <div class="navbar-nav me-auto py-0">
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Category</a>
-                    <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="#" class="dropdown-item">Category-1</a>
-                        <a href="#" class="dropdown-item">Category-2</a>
-                        <a href="#" class="dropdown-item">Category-3</a>
-                        <a href="#" class="dropdown-item">Category-4</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
-                    <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
-                        <a href="shop.html" class="dropdown-item">Shop-1</a>
-                        <a href="#" class="dropdown-item">Shop-2</a>
-                        <a href="#" class="dropdown-item">Shop-3</a>
-                        <a href="#" class="dropdown-item">Shop-4</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-
-                <div>
-                    <a href="" class="btn btn-success appointment py-3 px-4" data-bs-toggle="modal" data-bs-target="#videoModal">
-                        <span>Appointment</span>
+            <a href="index.html" class="navbar-brand d-block d-lg-none">
+                <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
+                <div class="small-device-responsive">
+                    <a href="index.html" >
+                        <img src="img/logo-2.png" style="height: 40px; width: 95px;" alt="logo">
                     </a>
                 </div>
+                <div class="navbar-nav ms-auto py-0">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="service.html" class="nav-item nav-link">Services</a>
+                </div>
+                <a href="index.html" class=" bg-primary py-2 px-4 d-none d-lg-block">
+                    <h1 class="text-white bridal-text">DIAMOND DRIDAL</h1>
+                </a>
+                <div class="navbar-nav me-auto py-0">
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Category</a>
+                        <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
+                            <a href="bridal_dress.html" class="dropdown-item">Bridal Dress</a>
+                            <a href="groom.html" class="dropdown-item">Groom</a>
+                            <a href="ornaments.html" class="dropdown-item">Ornaments</a>
+                            <a href="#" class="dropdown-item">Category-4</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Shop</a>
+                        <div class="dropdown-menu rounded-0 shadow-sm border-0 m-0">
+                            <a href="bridal_saree.html" class="dropdown-item">Bridal Shree</a>
+                            <a href="khubsurat.html" class="dropdown-item">Khubsurat</a>
+                            <a href="shop.html" class="dropdown-item">Shop-3</a>
+                            <a href="#" class="dropdown-item">Shop-4</a>
+                        </div>
+                    </div>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+    
+                    <div>
+                        <a href="" class="btn btn-success appointment py-3 px-4" data-bs-toggle="modal" data-bs-target="#videoModal">
+                            <span>Appointment</span>
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!-- Navbar End -->
+        </nav>
+        <!-- Navbar End -->
 
 
     <!-- Header Start -->
