--- a/bridal_dress.html
+++ b/bridal_dress.html
@@ -333,11 +333,15 @@
     <!-- Copyright End -->
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-    <a href="#" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="margin-bottom: 60px;"><i class="fa-brands fa-whatsapp"></i></a>
-
-
+        <!-- Back to Top Button -->
+        <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 20px; right: 20px; z-index: 99;">
+            <i class="bi bi-arrow-up"></i>
+        </a>
+    
+        <!-- WhatsApp Button -->
+        <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 80px; right: 20px; z-index: 1001;">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
 
 
     <!-- JavaScript Libraries -->
