--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 
        <!-- Navbar Start -->
-       <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+       <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
         <a href="index.html" class="navbar-brand d-block d-lg-none">
             <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
@@ -102,15 +102,15 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid hero-header bg-light py-5">
+    <div class="container-fluid hero-header bg-light" style="margin-top: 85px;">
         <div class="container ">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="display-4 mb-3 animated slideInDown">About Us</h1>
+                    <!-- <h1 class="display-4 mb-3 animated slideInDown">About Us</h1> -->
                     <nav aria-label="breadcrumb animated slideInDown">
-                        <ol class="breadcrumb mb-0">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                             <li class="breadcrumb-item active" aria-current="page">About Us</li>
                         </ol>
                     </nav>
@@ -129,7 +129,7 @@
         </div>
     </div>
     <!-- Header End -->
-
+     
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
