--- a/shop.html
+++ b/shop.html
@@ -154,12 +154,19 @@
                                 <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
                                 <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
                                 </div>
-                                
                                 <div class="d-flex justify-content-center mt-4">
-                                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #1DA1F2; color: white;">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #3b5998; color: white;">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #0077B5; color: white;">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #E1306C; color: white;">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
